infra: add jvmArgs in build.gradle